
===Additions and enhancements===

To the reproducible documents collection:

* tccs/sglowrank: Lowrank seismic wave extrapolation on a staggered
  grid (Fang, Fomel, Du, and Hu)
* xjtu/primer: A numerical tour of wave propagation (Yang)
* Moved rsf/usp/data to data/freeusp/land and added elevation statics

To SCons:

To documentation:

To APIs:

To the Python package:

To programs:

* Added color=lb Light-Bartlein color scheme in sfgrey and sfgrey3

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:

In the Python package:

In programs:

In the build system:

===Changes in defaults and interfaces===

==Release 1.6 (2014-05-09)==

===Additions and enhancements===

To the reproducible documents collection:

* gallery: migration gallery
* Moved jsg to tccs
* tccs/buttefly: A fast butterfly algorithm for generalized Radon
  transforms (Hu, Fomel, Demanet, and Ying)
* tccs/opwd: Omnidirectional plane-wave destruction (Chen, Fomel, and
  Lu)
* tccs/specrecom: Automated spectral recomposition with application in
  stratigraphic interpretation (Cai, Fomel, and Zeng)
* Moved sep/aniso to cwp/aniso
* icp/sam2013gpushortestpath: Shortest path ray tracing on parallel
  GPU devices (Monsegny and Agudelo)
* tccs/nar: Seismic data decomposition into spectral components using
  regularized nonstationary autoregression (Fomel)
* tccs/dsrtomo: First-break traveltime tomography with the
  double-square-root eikonal equation (Li, Vladimirsky, and Fomel)
* cup/rna2d: Random noise attenuation using f-x regularized
  nonstationary autoregression (Liu, Chen, Du, and Wu)
* cup/rna3d: Noncausal f-x-y regularized nonstationary prediction
  filtering for random noise attenuation on 3D seismic data (Liu and
  Chen)
* tccs/psp: A parallel sweeping preconditioner for heterogeneous 3D
  Helmholtz equations (Poulson, Engquist, Li, and Ying)
* tccs/uncert: Structural uncertainty of time-migrated seismic images
  (Fomel and Landa)